// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the Jambo component Click on first button 3 times , should increment counter 1`] = `
<section>
  <h1>Jambo</h1>
  <h2>Spielzug: 3</h2>
  <div>
    <div class="runde">
      <font-awesome-icon icon="fa-duotone fa-card-heart" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(255, 92, 92); --fa-secondary-color: white;"></font-awesome-icon>
    </div>
    <div class="runde">
      <font-awesome-icon icon="fa-duotone fa-card-heart" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(255, 92, 92); --fa-secondary-color: white;"></font-awesome-icon>
    </div>
    <div class="runde">
      <font-awesome-icon icon="fa-duotone fa-card-heart" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(255, 92, 92); --fa-secondary-color: white;"></font-awesome-icon>
    </div>
  </div><button>
    <font-awesome-icon icon="fa-duotone fa-cards-blank" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(246, 90, 131); --fa-secondary-color: rgb(127, 183, 126);"></font-awesome-icon>
  </button><button>
    <font-awesome-icon icon="fa-duotone fa-eraser" style="--fa-secondary-opacity: 1; --fa-primary-color: red; --fa-secondary-color: black;"></font-awesome-icon>
  </button>
</section>
`;

exports[`Testing the Jambo component Click on first button 4 times, click on reset button, should reset counter 1`] = `
<section>
  <h1>Jambo</h1>
  <h2>Start</h2>
  <!--v-if--><button>
    <font-awesome-icon icon="fa-duotone fa-cards-blank" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(246, 90, 131); --fa-secondary-color: rgb(127, 183, 126);"></font-awesome-icon>
  </button><button>
    <font-awesome-icon icon="fa-duotone fa-eraser" style="--fa-secondary-opacity: 1; --fa-primary-color: red; --fa-secondary-color: black;"></font-awesome-icon>
  </button>
</section>
`;

exports[`Testing the Jambo component Click on first button 6 times, should reset counter 1`] = `
<section>
  <h1>Jambo</h1>
  <h2>Start</h2>
  <!--v-if--><button>
    <font-awesome-icon icon="fa-duotone fa-cards-blank" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(246, 90, 131); --fa-secondary-color: rgb(127, 183, 126);"></font-awesome-icon>
  </button><button>
    <font-awesome-icon icon="fa-duotone fa-eraser" style="--fa-secondary-opacity: 1; --fa-primary-color: red; --fa-secondary-color: black;"></font-awesome-icon>
  </button>
</section>
`;

exports[`Testing the Jambo component Click on first button, should increment counter 1`] = `
<section>
  <h1>Jambo</h1>
  <h2>Spielzug: 1</h2>
  <div>
    <div class="runde">
      <font-awesome-icon icon="fa-duotone fa-card-heart" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(255, 92, 92); --fa-secondary-color: white;"></font-awesome-icon>
    </div>
  </div><button>
    <font-awesome-icon icon="fa-duotone fa-cards-blank" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(246, 90, 131); --fa-secondary-color: rgb(127, 183, 126);"></font-awesome-icon>
  </button><button>
    <font-awesome-icon icon="fa-duotone fa-eraser" style="--fa-secondary-opacity: 1; --fa-primary-color: red; --fa-secondary-color: black;"></font-awesome-icon>
  </button>
</section>
`;

exports[`Testing the Jambo component Initial Jambo component is mounted correctly 1`] = `
<section>
  <h1>Jambo</h1>
  <h2>Start</h2>
  <!--v-if--><button>
    <font-awesome-icon icon="fa-duotone fa-cards-blank" style="--fa-secondary-opacity: 1; --fa-primary-color: rgb(246, 90, 131); --fa-secondary-color: rgb(127, 183, 126);"></font-awesome-icon>
  </button><button>
    <font-awesome-icon icon="fa-duotone fa-eraser" style="--fa-secondary-opacity: 1; --fa-primary-color: red; --fa-secondary-color: black;"></font-awesome-icon>
  </button>
</section>
`;
